--- a/apps/web/src/styles/elements/_base.scss
+++ b/apps/web/src/styles/elements/_base.scss
@@ -6,6 +6,7 @@ body {
   background-color: var(--white);
   color: var(--black);
   font-family: var(--font-sans), system-ui, -apple-system, sans-serif;
+  overflow-x: hidden;
   @include type-body;
 }
 
