--- a/apps/web/src/styles/generic/_reset.scss
+++ b/apps/web/src/styles/generic/_reset.scss
@@ -21,6 +21,7 @@ html {
   scroll-behavior: smooth;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  overflow-x: clip;
 
   @media (prefers-reduced-motion: reduce) {
     scroll-behavior: auto;
